<resources>
    <string name="app_name">HealthTrackerApp</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="weight">Weight</string>
    <string name="kg">kg</string>
    <string name="height">Height</string>
    <string name="cm">cm</string>
    <string name="target_weight">Target Weight</string>
    <string name="sign_up">Sign up</string>
    <string name="analytics">Analytics</string>
    <string name="nutrients">Nutrients</string>
    <string name="calories">Calories</string>
    <string-array name="gender">
        <item>Female</item>
        <item>Male</item>
        <item>Prefer not to say</item>
    </string-array>
    <string-array name="unit_options">
        <item>g</item>
        <item>l</item>
        <item>ml</item>
        <item>kg</item>
    </string-array>
    <!--add serving size measurement-->
</resources>