<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".analytics.AnalyticsPage">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/analytics"
        android:textColor="@color/primary_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_marginTop="60dp"
        android:layout_marginBottom="60dp"
        android:layout_marginHorizontal="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation_view"
        app:layout_constraintTop_toTopOf="parent"

        android:gravity="top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="0.1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="0.2"
                    android:gravity="center" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Eaten"
                        android:textColor="@color/primary_text"
                        android:textAlignment="center"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/calorie_intake"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primary_text"
                        android:textAlignment="center"
                        android:textSize="26sp" />

                </LinearLayout>

                <com.github.mikephil.charting.charts.HorizontalBarChart
                    android:id="@+id/calorie_budget_chart"
                    android:layout_width="0px"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.6"
                    android:layout_marginVertical="8dp"
                    app:layout_constraintVertical_bias="10.0" />

                <LinearLayout
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="0.2"
                    android:gravity="center" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Net"
                        android:textColor="@color/primary_text"
                        android:textAlignment="center"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/net_calories"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primary_text"
                        android:textAlignment="center"
                        android:textSize="26sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="0.35"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".50"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primary_text"
                        android:textSize="15sp"
                        android:text="@string/weight"
                        android:textAlignment="center"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/weight_line_chart"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginVertical="8dp"
                        app:layout_constraintVertical_bias="10.0" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".50"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primary_text"
                        android:textSize="15sp"
                        android:text="@string/nutrients"
                        android:textAlignment="center"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <com.github.mikephil.charting.charts.RadarChart
                        android:id="@+id/nutrient_radar_chart"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginVertical="8dp"
                        app:layout_constraintVertical_bias="10.0" />

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".50"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="10dp"
                    android:layout_margin="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primary_text"
                        android:textSize="15sp"
                        android:text="@string/calories"
                        android:textAlignment="center"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <com.github.mikephil.charting.charts.BarChart
                        android:id="@+id/calories_bar_chart"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_margin="8dp" />

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/primary"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_nav"/>

</androidx.constraintlayout.widget.ConstraintLayout>